find_package(Doxygen)
if (DOXYGEN_FOUND)
  set(DOX_HTML_OUTPUT_DIR public)
  set(DOX_EXCLUDE_PATTERNS "*_p.h")
  set(DOX_EXCLUDE_SYMBOLS "*Private")
  set(DOX_INCLUDE_INTERNAL NO)
  configure_file(doxyfile.in public.doxy)
  add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} public.doxy)

  set(DOX_HTML_OUTPUT_DIR internal)
  unset(DOX_EXCLUDE_PATTERNS)
  unset(DOX_EXCLUDE_SYMBOLS)
  set(DOX_INCLUDE_INTERNAL YES)
  configure_file(doxyfile.in internal.doxy)
  add_custom_target(doc-internal COMMAND ${DOXYGEN_EXECUTABLE} internal.doxy)
endif()
